--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "crispy-tailwind>=1.0.3",
     "django>=5.2.3",
+    "django-crispy-forms>=2.4",
     "psycopg2>=2.9.10",
 ]
