--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "crispy-tailwind>=1.0.3",
     "django>=5.2.3",
     "django-crispy-forms>=2.4",
+    "pillow>=11.2.1",
     "psycopg2>=2.9.10",
 ]
