--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ dependencies = [
     "crispy-tailwind>=1.0.3",
     "django>=5.2.3",
     "django-crispy-forms>=2.4",
+    "lorem>=0.1.1",
     "pillow>=11.2.1",
     "psycopg2>=2.9.10",
+]
+
+[dependency-groups]
+dev = [
+    "django-extensions>=4.1",
+    "pydot>=4.0.1",
 ]
